--- a/crates/router/src/core/generic_link/payment_method_collect/initiate/styles.css
+++ b/crates/router/src/core/generic_link/payment_method_collect/initiate/styles.css
@@ -26,9 +26,9 @@ body {
   scrollbar-width: none;
 }
 
-.main, #payment-method-collect, #orca-payment-element-iframeRef-payment-method-collect {
-  width: 100vh;
-  height: 100vw;
+.main, #payment-method-collect {
+  height: 100vh;
+  width: 100vw;
 }
 
 .main {
