--- a/crates/router/src/core/generic_link/payout_link/status/styles.css
+++ b/crates/router/src/core/generic_link/payout_link/status/styles.css
@@ -5,10 +5,12 @@ body {
 }
 
 body {
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   display: flex;
   flex-flow: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   margin: 0;
   color: #333333;
 }
@@ -31,8 +33,72 @@ body {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  min-width: 600px;
-  width: 50vw;
+  width: 500px;
+}
+
+#status-card {
+  max-width: 500px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 1px 1px 10px 1px rgb(231, 234, 241);
+  border-radius: 0.5rem;
+}
+
+#merchant-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgb(231, 234, 241);
+  padding: 20px 40px;
+  width: calc(100% - 80px);
+  font-weight: 600;
+  font-size: 25px;
+}
+#merchant-header > img {
+  height: 30px;
+}
+
+#status-image {
+  margin-top: 30px;
+  height: 160px;
+}
+
+#status-text {
+  margin-top: 10px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#status-message {
+  text-align: center;
+  margin: 0 40px 40px 40px;
+  color: rgb(103, 112, 125);
+}
+
+#resource-info-container {
+  width: calc(100% - 80px);
+  border-top: 1px solid rgb(231, 234, 241);
+  padding: 20px 40px;
+}
+#resource-info {
+  display: flex;
+  align-items: center;
+}
+#info-key {
+  text-align: right;
+  font-size: 15px;
+  min-width: 10ch;
+}
+#info-val {
+  margin-left: 10px;
+  padding-left: 10px;
+  border-left: 1px solid rgba(103, 112, 125, 0.2);
+  font-size: 13px;
+}
+#redirect-text {
+  margin-top: 40px;
 }
 
 @media only screen and (max-width: 1199px) {
